--- a/BillingSystem3.0/BillingSystem3.0.csproj
+++ b/BillingSystem3.0/BillingSystem3.0.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Models\GenerateReading.cs" />
     <Compile Include="Models\HomeOwners.cs" />
     <Compile Include="Models\InvoiceDetails.cs" />
+    <Compile Include="Models\Invoices.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadingsUI.cs">
