--- a/BillingSystem3.0/App.config
+++ b/BillingSystem3.0/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="BillingSystem3._0.Properties.Settings.BillingSystemConnectionString"
+            connectionString="Data Source=NM;Initial Catalog=BillingSystem;Integrated Security=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
