--- a/BillingSystem3.0/BillingSystem3.0.csproj
+++ b/BillingSystem3.0/BillingSystem3.0.csproj
@@ -58,6 +58,11 @@
     <Compile Include="AddCollectionsUI.Designer.cs">
       <DependentUpon>AddCollectionsUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="BillingSystemDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BillingSystemDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="BillingUI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,6 +127,12 @@
     <Compile Include="Reports.Designer.cs">
       <DependentUpon>Reports.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReportsUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportsUI.Designer.cs">
+      <DependentUpon>ReportsUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="UpdateHomeowners.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,9 +181,23 @@
     <EmbeddedResource Include="Reports.resx">
       <DependentUpon>Reports.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReportsUI.resx">
+      <DependentUpon>ReportsUI.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UpdateHomeowners.resx">
       <DependentUpon>UpdateHomeowners.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="BillingSystemDataSet.xsc">
+      <DependentUpon>BillingSystemDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="BillingSystemDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>BillingSystemDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="BillingSystemDataSet.xss">
+      <DependentUpon>BillingSystemDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
